@@ -39,12 +39,13 @@ function strip_lines_from_bazel_cc() {
     -e '/^\$TEST_TMPDIR defined: output root default is/d' \
     -e '/^OpenJDK 64-Bit Server VM warning: ignoring option UseSeparateVSpacesInYoungGen; support was removed in 8.0/d' \
     -e '/^Starting local B[azel]* server and connecting to it\.\.\.\.*$/d' \
-    -e '/^\.\.\. still trying to connect to local B[azel]* server ([0-9]+) after [1-9][0-9]* seconds \.\.\.\.*$/d' \
+    -e '/^\.\.\. still trying to connect to local B[azel]* server ([1-9][0-9]*) after [1-9][0-9]* seconds \.\.\.\.*$/d' \
     -e '/^Killed non-responsive server process/d' \
     -e '/server needs to be killed, because the startup options are different/d' \
     -e '/^WARNING: Waiting for server process to terminate (waited 5 seconds, waiting at most 60)$/d' \
     -e '/^WARNING: The startup option --host_javabase is deprecated; prefer --server_javabase.$/d' \
     -e '/^WARNING: The home directory is not defined, no home_rc will be looked for.$/d' \
+    -e '/Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release/d' \
     $TEST_log)
 
   echo "$clean_log" > $TEST_log
